[gd_scene load_steps=8 format=3 uid="uid://675p0otu3tys"]

[ext_resource type="Script" uid="uid://bdhfe81q16ew7" path="res://UI/ui.gd" id="1_qui0h"]
[ext_resource type="PackedScene" uid="uid://o8or5o3p05wo" path="res://WindMeter/wind_meter.tscn" id="3_0mc3e"]
[ext_resource type="PackedScene" uid="uid://br2d7secgwnnl" path="res://Minimap/Minimap.tscn" id="4_2n5f6"]
[ext_resource type="PackedScene" uid="uid://b1vpe7qknj640" path="res://Questlog/Questlog.tscn" id="4_e707p"]
[ext_resource type="Texture2D" uid="uid://ruwwjvjhle3m" path="res://UI/minimap_icon.png" id="4_jqf55"]
[ext_resource type="Texture2D" uid="uid://d4mqdbjl27v1t" path="res://UI/temp-barrell.png" id="6_jqf55"]
[ext_resource type="PackedScene" uid="uid://b3l65vd7vkrod" path="res://Subtitle/Subtitle.tscn" id="7_byuxr"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_qui0h")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1128.0
offset_bottom = 664.0

[node name="DebugPanel" type="Panel" parent="UserInterface"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 239.0
scale = Vector2(0.99883455, 1)

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="DebugLabel" type="Label" parent="UserInterface/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "speed: 0m/s
sail state: 0
steering state: 0
felho: 0"

[node name="fps_Label" type="Label" parent="UserInterface/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="UserInterface/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "wobble"

[node name="CompleteAll" type="Button" parent="UserInterface/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "coomplettte"

[node name="WindMeter" parent="UserInterface" instance=ExtResource("3_0mc3e")]
layout_mode = 0
offset_left = 1778.0
offset_top = 29.0
offset_right = 1818.0
offset_bottom = 69.0

[node name="MinimapIcon" type="Sprite2D" parent="UserInterface"]
position = Vector2(1873, 1033)
texture = ExtResource("4_jqf55")

[node name="Questlog" parent="." instance=ExtResource("4_e707p")]
visible = false
z_index = 99
position = Vector2(960, 540)
scale = Vector2(0.9, 0.9)

[node name="Minimap" parent="." instance=ExtResource("4_2n5f6")]
visible = false
position = Vector2(8, -7)

[node name="Barrell" type="Sprite2D" parent="."]
position = Vector2(41, 1036)
texture = ExtResource("6_jqf55")

[node name="Barrell2" type="Sprite2D" parent="."]
position = Vector2(116, 1036)
texture = ExtResource("6_jqf55")

[node name="Barrell3" type="Sprite2D" parent="."]
position = Vector2(192, 1036)
texture = ExtResource("6_jqf55")

[node name="Subtitle" parent="." instance=ExtResource("7_byuxr")]
offset_left = 509.0
offset_top = 988.0
offset_right = 1509.0
offset_bottom = 1070.0

[connection signal="toggled" from="UserInterface/DebugPanel/MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="UserInterface/DebugPanel/MarginContainer/VBoxContainer/CompleteAll" to="." method="_on_complete_all_pressed"]
